2006-03-04  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/legacy/glue.py:
	Fixed misplaced return.

	* tools/migrate.py:
	* tools/managessi.py:
	Switched to /usr/bin/env python.

	* src/tlib/oscar.py:
	Added functionality to request "short info".

	* src/legacy/icqt.py:
	Added pieces to auto-retrieve nicknames.

	* src/jabw.py:
	Switched namespace for roster subsync.

	* src/legacy/icqt.py:
	Added better handling of nick.

	* src/tlib/oscar.py:
	Updated to actually include extended pieces of SSIBuddy.

	* src/legacy/glue.py:
	Fixed bug with retrieval of ip address and such.

2006-03-03  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/legacy/glue.py:
	Removed print of variable that didn't exist.

	* src/tlib/oscar.py:
	Fixed lack of check for errorurl.

2006-03-01  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/web/handler.py:
	Fixed stupid call to attribute that didn't exist.

	* tools/Makefile:
	Made testinst more verbose.

	* src/legacy/legacylist.py:
	Fixed bad call to updateIconHashes.

2006-02-28  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/tlib/oscar.py:
	Fixed warning (thanks to pkern from chatroom).

	* src/legacy/legacylist.py:
	Fixed debug output.

	* src/legacy/glue.py:
	Fixed lack of removal of "get their icon" indicator.

	* src/legacy/icqt.py:
	Cleaned up connectionLost code a tad.

2006-02-27  Daniel Henninger  <jadestorm@nc.rr.com>

	* tools/Makefile:
	Added script to create test install.

	* src/tlib/oscar.py:
	Fixed stupid error.

	* src/legacy/glue.py:
	* src/legacy/legacylist.py:
	* src/tlib/oscar.py:
        Worked on improvements to direct buddy icons.

2006-02-26  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/avatar.py:
	Fixed odd call to abspath.

	* src/tlib/oscar.py:
	Added other SSI and user info types.

2006-02-24  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/legacy/icqt.py:
	Fixed double encoding issue with auto-away messages.

2006-02-22  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/tlib/oscar.py:
	* src/legacy/icqt.py: