@@ -1,3 +1,8 @@
+2006-03-05  Daniel Henninger  <jadestorm@nc.rr.com>
+
+	* src/legacy/legacylist.py:
+	Fixed updateNickname to behave itself...
+
 2006-03-04  Daniel Henninger  <jadestorm@nc.rr.com>
 
 	* src/legacy/glue.py:
